<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_settings"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="fr.jean_barriere.note.activity.SettingsActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="@dimen/materialize_statusbar"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentEnd="true"
        android:background="@color/colorPrimary"
        android:contentDescription="@string/space" />

    <android.support.v7.widget.Toolbar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="?attr/colorPrimary"
        android:theme="?attr/actionBarTheme"
        android:minHeight="?attr/actionBarSize"
        android:id="@+id/toolbar_settings"
        android:layout_alignParentTop="true"
        android:layout_alignParentStart="true"
        android:layout_marginTop="@dimen/materialize_statusbar"
        app:titleTextColor="@color/white" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_settings">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_marginBottom="@dimen/cardMarginVertical"
                android:layout_marginLeft="@dimen/cardMarginHorizontal"
                android:layout_marginRight="@dimen/cardMarginHorizontal"
                android:layout_marginTop="@dimen/cardMarginVertical"
                android:layout_height="match_parent">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">

                    <TextView
                        android:text="@string/open_source_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/title"
                        android:textStyle="bold"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginTop="10dp" />


                    <TextView
                        android:text="@string/url_android_iconics"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/url_android_iconics"
                        android:padding="10dp" />

                    <TextView
                        android:text="@string/url_butterknife"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/url_butterknife"
                        android:padding="10dp" />

                    <TextView
                        android:text="@string/url_floatingactionbutton"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/url_floatingactionbutton"
                        android:padding="10dp" />

                    <TextView
                        android:text="@string/url_materialdrawer"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/url_materialdrawer"
                        android:padding="10dp" />

                    <TextView
                        android:text="@string/url_materialedittext"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/url_materialedittext"
                        android:padding="10dp" />

                    <TextView
                        android:text="@string/url_materialsearchview"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/url_materialsearchview"
                        android:padding="10dp" />

                    <TextView
                        android:text="@string/url_materialviewpager"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/url_materialviewpager"
                        android:padding="10dp" />

                    <TextView
                        android:text="@string/url_picasso"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/url_picasso"
                        android:padding="10dp" />

                </LinearLayout>
            </android.support.v7.widget.CardView>

            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:cardCornerRadius="2dp"
                app:cardElevation="2dp"
                android:layout_marginBottom="@dimen/cardMarginVertical"
                android:layout_marginLeft="@dimen/cardMarginHorizontal"
                android:layout_marginRight="@dimen/cardMarginHorizontal"
                android:layout_marginTop="@dimen/cardMarginVertical"
                app:cardPreventCornerOverlap="false" >

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:padding="10dp">
                    <TextView
                        android:text="@string/resources_title"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/title_res"
                        android:textStyle="bold"
                        android:layout_marginBottom="20dp"
                        android:layout_marginLeft="0dp"
                        android:layout_marginRight="0dp"
                        android:layout_marginTop="10dp" />


                    <TextView
                        android:text="@string/url_unsplash"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:id="@+id/url_unsplash"
                        android:padding="10dp" />
                </LinearLayout>
            </android.support.v7.widget.CardView>
        </LinearLayout>
    </ScrollView>

</RelativeLayout>
